data/derived/comb/progs/unify/prog2334.ml.out
Characters 68-91:
  | h :: t -> (fold_l f base t) (f h);;
              ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         'b -> 'a
       The type variable 'a occurs inside 'b -> 'a
